# fine-tuning-vs-scratch-train-llm-classification

./: .gitignore  README.md  pyproject.toml
models/: __init__.py  small_transformer_classifier.py
results/fine_tuned_ag_news_gpt2_lora/: final_results.json  training_history.json
results/from_scratch_ag_news_small/: final_results.json  training_history.json
results/from_scratch_ag_news_tiny/: final_results.json  training_history.json
scripts/: __init__.py  explore_dataset.py  prepare_data.py  train_fine_tune.py  train_from_scratch.py
utils/: classification_dataset.py  config.py  dataset.py  gpt2_tokenizer.py  metrics.py  plotting.py  sentencepiece_tokenizer.py  tokenizer_factory.py  whitespace_tokenizer.py
